[tool.poetry]
name = "daylio-parser"
version = "0.4.2"
description = "A Python module to parse Daylio exports"
authors = ["staticf0x <staticf0x@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticf0x/daylio-parser"
repository = "https://github.com/staticf0x/daylio-parser"
documentation = "https://daylio-parser.readthedocs.io/en/latest/"
keywords = ["daylio", "parser", "stats"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
isort = "^5.10"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.1.0"
tox = "^4.4.2"
black = "^23.9.1"
flake8 = "^6.0.0"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
devtools = {extras = ["pygments"], version = "^0.12.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
