[tool.poetry]
name = "daylio-parser"
version = "0.4.2"
description = "A Python module to parse Daylio exports"
authors = ["staticf0x <staticf0x@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticf0x/daylio-parser"
repository = "https://github.com/staticf0x/daylio-parser"
documentation = "https://daylio-parser.readthedocs.io/en/latest/"
keywords = ["daylio", "parser", "stats"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
isort = "^5.10"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.1.0"
tox = "^4.4.2"
black = "^24.3.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
devtools = {extras = ["pygments"], version = "^0.12.2"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"

# For rule groups and specific rules, see:
# https://beta.ruff.rs/docs/rules/
select = ["ALL"]

ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    "D203",  # 1 blank line required before class docstring (incompatible with D211)
    "D213",  # Multi-line docstring summary should start at the second line (incompatible with D212)
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "TD",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "ANN",  # All type annotations
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "S101",  # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "SLF001", # Private member access
]

[tool.ruff.mccabe]
max-complexity = 10
